test_cases/fail/f18.lxr
SCRIPT AREA
START SCRIPT
DECLARE INT IF
END SCRIPT
